OLMIS-134: Fix overlap amongst menu-text and arrow-image.

--- a/modules/openlmis-web/src/main/webapp/public/less/navigation.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/navigation.less
@@ -126,6 +126,7 @@
 
 .navigation ul li.has-children {
   background: url(../images/left-arrow.png) no-repeat 95% center;
+  padding-right: 10px;
 }
 
 .navigation ul li:hover > .submenu {
